--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginVertical="3dp"
-    android:background="#dedad9">
+    android:background="#dedad9"
+    android:id="@+id/containerLayout">
 
     <TextView
         android:id="@+id/tvName"
