--- a/app/src/main/res/layout/dialog_file_from_drive.xml
+++ b/app/src/main/res/layout/dialog_file_from_drive.xml
@@ -2,55 +2,27 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="#cbcdd1"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginHorizontal="50dp"
+        android:layout_marginVertical="50dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:background="#fff">
 
-        <EditText
-            android:id="@+id/edtName"
-            android:layout_width="400dp"
-            android:layout_height="50dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:hint="name..."
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="#000"
-            android:maxLines="1"
-            android:ellipsize="end"
-            />
-
-        <EditText
-            android:id="@+id/edtPhoneNumber"
-            android:layout_width="400dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/edtName"
-            app:layout_constraintStart_toStartOf="parent"
-            android:hint="number..."
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:textColor="#000"
-            android:inputType="phone"
-            android:layout_marginTop="5dp"
-            android:maxLines="1"
-            android:ellipsize="end"
-            />
-
         <TextView
-            android:id="@+id/btnCancel"
+            android:id="@+id/btnCancelFileFromDrive"
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:text="Cancel"
-            app:layout_constraintTop_toBottomOf="@id/edtPhoneNumber"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:gravity="center"
             android:layout_marginTop="5dp"
@@ -58,16 +30,28 @@
             android:textColor="@android:color/holo_red_light"/>
 
         <TextView
-            android:id="@+id/btnAdd"
+            android:id="@+id/btnAddFileFromDrive"
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:text="Add"
-            app:layout_constraintTop_toBottomOf="@id/edtPhoneNumber"
-            app:layout_constraintEnd_toStartOf="@id/btnCancel"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btnCancelFileFromDrive"
             android:gravity="center"
             android:layout_marginTop="5dp"
             android:textSize="20sp"
             android:textColor="#0000FF"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvFileFromDrive"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btnCancelFileFromDrive"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/file_from_drive_item"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
