--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -54,4 +54,24 @@
         android:layout_marginEnd="5dp"
         android:backgroundTint="@android:color/transparent"/>
 
+    <ImageButton
+        android:id="@+id/btnSms"
+        android:src="@drawable/ic_sms"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toBottomOf="@id/tvName"
+        app:layout_constraintEnd_toStartOf="@id/btnEdit"
+        android:layout_marginEnd="5dp"
+        android:backgroundTint="@android:color/transparent"/>
+
+    <ImageButton
+        android:id="@+id/btnCallPhone"
+        android:src="@drawable/ic_phone"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toBottomOf="@id/tvName"
+        app:layout_constraintEnd_toStartOf="@id/btnSms"
+        android:layout_marginEnd="5dp"
+        android:backgroundTint="@android:color/transparent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
